--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: /blog # the subpath of your site, e.g. /blog
 url: https://yeojingi.github.io # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
-google_scholar: hi
+# twitter_username: jekyllrb
+# github_username:  jekyll
 
 # Build settings
 theme: minima
